header not finished

--- a/web.html
+++ b/web.html
@@ -1,2 +1,27 @@
-<p>My cat is very grumpy</p>
-<p>My cat is very grumpy</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>秋星有限公司</title>
+    <link rel="stylesheet" href="web.css">
+  </head>
+  <body>
+    <header>
+      <div class="head-logo">
+        <img class="logo-picture" src="ball.JPG">
+        <span class="logo-word">秋星 </br>CHO-XING</span>
+      </div>
+      <div class="head-word">
+        <nav class="menu">
+          <ul class="menu-ul">
+            <li class="menu-li"><a href="https://www.youtube.com/">關於我們</a></li>
+            <li class="menu-li"><a href="https://www.youtube.com/">產品資訊</a></li>
+            <li class="menu-li"><a href="https://www.youtube.com/">聯絡我們</a></li>
+          </ul>
+        </nav>
+      </div>
+      <hr>
+    </header>
+    
+    
+  </body>
+</html>
