新增側邊欄和跳轉頁面

--- a/web.html
+++ b/web.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant-Tw">
   <head>
+    <meta charset="UTF-8">
     <title>秋星有限公司</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="css/web.css">
   </head>
   <body>
     <header>
@@ -13,14 +14,85 @@
       <div class="head-word">
         <nav class="menu">
           <ul class="menu-ul">
-            <li class="menu-li"><a href="https://www.youtube.com/">關於我們</a></li>
-            <li class="menu-li"><a href="https://www.youtube.com/">產品資訊</a></li>
-            <li class="menu-li"><a href="https://www.youtube.com/">聯絡我們</a></li>
+            <li class="menu-li"><a href="html/aboutus.html">關於我們</a></li>
+            <li class="menu-li"><a href="html/product.html">產品資訊</a></li>
+            <li class="menu-li"><a href="html/contact.html">聯絡我們</a></li>
           </ul>
         </nav>
       </div>
       <hr>
     </header>
+    <aside>
+      <a href="https://www.youtube.com/">千斤頂</a>
+      <br>
+      <a href="https://www.youtube.com/">B</a>
+      <br>
+      <a href="https://www.youtube.com/">C</a>
+      <br>
+    </aside>
+    <div class="product-info-grid">
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+      <div>
+        <img class="product-pic" src="ball.JPG">
+        <span class="pic-word">千斤頂</span>
+      </div>
+
+    </div>
     
     
   </body>
