刪除側邊欄

--- a/product.html
+++ b/product.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-Tw">
   <head>
     <meta charset="UTF-8">
-    <title>秋星有限公司</title>
+    <title>產品資訊</title>
     <link rel="stylesheet" href="css/web.css">
   </head>
   <body>
